APPWEB-50: Reduced Tomcat dependency in default goal for GWT Rest showcase